--- a/website/style.css
+++ b/website/style.css
@@ -1,88 +1,64 @@
-body{
-    background: #fffff8;
+body {
+    background-color: rgb(2, 5, 54);
+    color: whitesmoke;
     font-family: -apple-system, BlinkMacSystemFont, sans-serif;
 }
 
-#app{
+#app {
     display: grid;
     grid-auto-rows: minmax(150px, auto);
     /* grid-template-columns:  */
     height:100vh;
-    background: #f23557;
-    color: #f0d43a;
     justify-content: center;
-    grid-gap: 1em;
     font-size: 20px;
     font-family: 'Oswald', sans-serif;
 }
 
-.holder{
-
+#zip {
+    background-color: rgb(59, 59, 192);
+    color: whitesmoke;
 }
 
-.entry{
-    background: rgba(59, 74, 107, .4);
+#feelings {
+    background-color: rgb(59, 59, 192);
+    color: whitesmoke;
+    height: 20vh;
 }
 
-#entryHolder{
-
-}
-
-#date{
-
-}
-
-#temp{
-
-}
-
-#content{
-
-}
-
-.headline {
-
-}
-.title{
-
+.title {
+    margin-top: 20px;
 }
 
 /*  Basic Styling To Override Default For Basic HTML Elements */
-label{
+label {
     display:block;
-    font-size: 27px;
+    font-size: 18px;
 }
 
-input{
+input {
     display:block;
     height: 60px;
     width: 320px;
-    background:#22b2da;
-    color: #f0d43a;
-    font-size: 20px;
+    font-size: 17px;
     font-family: 'Oswald', sans-serif;
-    border: none;
 }
 
-button{
-    width: 400px;
+button {
+    width: 200px;
     height: 100px;
-    background: #3b4a6b;
-    color: #f0d43a;
+    background-color: rgba(82, 124, 238, 0.938);
+    margin: 50px;
     font-size: 26px;
     font-family: 'Oswald', sans-serif;
-    border: none;
+    color:  rgb(2, 5, 54);;
     box-shadow: 2px 4px 5px #444;
 }
-h1{
-    font-size: 36px;
-}
 
-textarea{
+textarea {
     background:#22b2da;
-    color: #f0d43a;
-    font-size: 20px;
+    font-size: 17px;
     font-family: 'Oswald', sans-serif;
+    color: whitesmoke;
 }
 /* Reset style for HTML element on active to have no border*/
 input:focus,
@@ -93,19 +69,16 @@ button:focus {
 }
 /* Style for Placeholder Text*/
 ::placeholder { /* Firefox, Chrome, Opera */ 
-    color: #f0d43a; 
+    color: wheat;
     font-family: 'Oswald', sans-serif;
-
 } 
   
 :-ms-input-placeholder { /* Internet Explorer 10-11 */ 
-    color: #f0d43a; 
     font-family: 'Oswald', sans-serif;
-
+    color: wheat;
 } 
   
 ::-ms-input-placeholder { /* Microsoft Edge */ 
-    color: #f0d43a; 
     font-family: 'Oswald', sans-serif;
-
+    color: wheat;
 } 
